--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <a href="https://cedanodev.github.io/proyectoFinal/" style="text-decoration: none;">
+        <button style="background-color: #007bff; color: white; border: none; padding: 10px 15px; margin-bottom: 10px; border-radius: 4px; cursor: pointer;">
+            Regresar
+        </button>
+    </a>
     <div class="container">
         <h1>Registro de Ventas Mensuales</h1>
         <form id="salesForm">
